<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="4dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent"/>

        <LinearLayout
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_item_photo"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/city_title" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:text="@string/populasi"
                android:layout_width="64dp"
                android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_item_pop"
                    android:maxLines="2"
                    tools:text="@string/populasi" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:text="@string/province"
                    android:layout_width="64dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_item_province"
                    android:maxLines="2"
                    tools:text="@string/province" />
            </TableRow>
            <Button
                android:id="@+id/btn_more"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/more"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>