<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                tools:src="@color/colorAccent"/>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/city_title"
            android:gravity="center"
            android:textSize="24sp"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:padding="6dp"
            android:textColor="@android:color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/black"
                tools:text="Detail"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_identity"
                android:textSize="16sp"
                android:textStyle="bold"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">

            <TextView
                android:text="@string/province"
                android:layout_width="64dp"/>

            <TextView
                android:id="@+id/tv_item_province"
                android:maxLines="2"
                tools:text="@string/province"
                android:textColor="@android:color/black"/>

        </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:text="@string/populasi"
                    android:layout_width="64dp" />

                <TextView
                    android:id="@+id/tv_item_pop"
                    android:maxLines="2"
                    tools:text="@string/populasi"
                    android:textColor="@android:color/black"/>
            </TableRow>
            <Button
                android:id="@+id/btn_location"
                android:text="Lihat di Maps"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>